--- a/css/issue.css
+++ b/css/issue.css
@@ -127,6 +127,7 @@ a {
   }
   .panel li {
     margin-top: 10px;
+    word-wrap: break-word
   }
 
   button.accordion {
